@@ -14,18 +14,13 @@ var (
 	// The default config cannot include the beat name as it is not initialized
 	// when this variable is created. See ChangeDefaultCfgfileFlag which should
 	// be called prior to flags.Parse().
-	configfile = flag.String("c", "beat.yml", "Configuration file")
-	testConfig = flag.Bool("configtest", false, "Test configuration and exit.")
+	configfiles = flagArgList("c", "beat.yml", "Configuration file")
+	testConfig  = flag.Bool("configtest", false, "Test configuration and exit.")
 )
 
 // ChangeDefaultCfgfileFlag replaces the value and default value for the `-c`
 // flag so that it reflects the beat name.
 func ChangeDefaultCfgfileFlag(beatName string) error {
-	cliflag := flag.Lookup("c")
-	if cliflag == nil {
-		return fmt.Errorf("Flag -c not found")
-	}
-
 	path, err := filepath.Abs(filepath.Dir(os.Args[0]))
 	if err != nil {
 		return fmt.Errorf("Failed to set default config file location because "+
@@ -33,9 +28,9 @@ func ChangeDefaultCfgfileFlag(beatName string) error {
 			os.Args[0], err)
 	}
 
-	cliflag.DefValue = filepath.Join(path, beatName+".yml")
-
-	return cliflag.Value.Set(cliflag.DefValue)
+	path = filepath.Join(path, beatName+".yml")
+	configfiles.SetDefault(path)
+	return nil
 }
 
 // Deprecated: Please use Load().
@@ -57,7 +52,7 @@ func Read(out interface{}, path string) error {
 // line flag.
 func Load(path string) (*common.Config, error) {
 	if path == "" {
-		path = *configfile
+		return common.LoadFiles(configfiles.list...)
 	}
 	return common.LoadFile(path)
 }
